# render

./: CMakeLists.txt  README.md  render.sln  vcpkg.json
render/: camera.cpp  camera.hpp  chrono.hpp  debug.hpp  fptype.cpp  fptype.h  hitable.hpp  material.cpp  material.hpp  render.cpp  render.vcxproj  sphere.cpp  sphere.hpp  vec3.cpp  vec3.hpp
src/: camera.cpp  hitable_list.hpp  pfm.cpp  pfm.hpp  ray.hpp  render.cpp  sphere.cpp  sphere.hpp  vec3.cpp
